fix tabs spacing on the css

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,16 +1,20 @@
 /* url(https://plugin.intuitcdn.net/identity-authn-core-ui/scripts/../images/lock-fail@3x-54ece77c.png) 
 no-repeat 0% 50% / 21px 21px */
 
-*{
+
+
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
-    background:#eee;
+
+body {
+    background: #eee;
     font-family: Arial, Helvetica, sans-serif;
 }
-.header{
+
+.header {
     width: 100%;
     height: auto;
     margin-top: 0.6em;
@@ -18,27 +22,16 @@ body{
     flex-direction: row;
     justify-content: flex-end;
 }
-.header button{
+
+.header button {
     width: 7.8em;
     height: 35px;
-    border-radius:5px;
+    border-radius: 5px;
     padding-right: 8px;
     margin-right: 30px;
-    margin-left: 10px;
+}
 
-}
-.signup img{
-    display: inline-block;
-    width: 16px;
-    height: 12px;
-    margin-top: 2px;
-    margin-right: 4px;
-    vertical-align: text-top; 
-}
-.mini-header{
-    margin-top: 20px;
-}
-.header img{
+.signup img {
     display: inline-block;
     width: 16px;
     height: 12px;
@@ -46,46 +39,69 @@ body{
     margin-right: 4px;
     vertical-align: text-top;
 }
-.header div{
-   line-height: 20px;
-   text-align: right;
-   font-size: 12px;
+
+.mini-header {
+    margin-top: 20px;
 }
-.header a{
-    color:#0077C5;
-    text-decoration: none;
+
+.header img {
+    display: inline-block;
+    width: 16px;
+    height: 12px;
+    margin-top: 2px;
+    margin-right: 4px;
+    vertical-align: text-top;
 }
-.logo{
+
+.header div {
+    line-height: 20px;
+    text-align: right;
+    font-size: 12px;
+}
+
+.header a {
+    color: #0077C5;
+}
+
+.logo {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
-.logo img{
+
+.logo img {
     width: 140px;
     padding: 10px;
 }
-.sub-logos{
+
+.sub-logos {
     display: flex;
     flex-direction: row;
-    justify-content: center;  
+    justify-content: center;
+
 }
-.sub-logos img{
+
+.sub-logos img {
     width: 24px;
     height: 24px;
+    margin-right: 2px;
 }
-.sub-logos span{
+
+.sub-logos span {
     margin: 4px;
-    color:#999;
-    font-size: large;  
+    color: #999;
+
 }
-.main-wrapper{
+
+.main-wrapper {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-form{
-    width: 28.5%;
+
+form {
+    width: 30%;
     height: auto;
     border: 1px solid #aaa;
     background: white;
@@ -94,126 +110,133 @@ form{
     margin-top: 1em;
     border-radius: 3px;
     text-align: center;
-    color:#444;
+    color: #444;
     font-weight: lighter;
-    
+
 }
-.info{
-    margin:0 1.5em;
+
+.info {
+    margin: 0 1.5em;
     font-size: small;
 }
-.learn-more{
+
+a {
     text-decoration: none;
-    text-decoration: none;
-    color:  #0077C5;    
-    font-size: 0.85em;
+    color: #0077C5;
 }
-ul{
+
+ul {
+    padding: 0 1em;
     list-style-type: none;
 }
+
 ul li {
     text-align: center;
     height: 130px;
 }
-label{
+
+label {
     display: block;
     text-align: left;
-    margin-left: 20px;
+    margin-left: 15px;
     font-size: 14px;
     line-height: 30px;
 }
-input{
+
+input {
     height: 3em;
     border-radius: 5px;
-    border:1px solid #C1C5C8;
+    border: 1px solid #C1C5C8;
 }
 
-form input{
-    width: 90%;
+form input {
+    width: 96;
+    margin: 3%;
 }
- 
-.phone-info{
+
+.phone-info {
     font-size: 10px;
-    padding-bottom:1em;
+    padding: 0 0 1em;
     text-align: center;
     float: left;
-    margin-left: 2em;  
+    margin-left: 15px;
 }
 
 form p {
     text-align: center;
 }
-.padlock{
-    /* background: red;   */
-    width: 100px;
-    height: 100px;  
-    background:url("lock.png"); 
-}  
-/*  no-repeat 0% 50% / 21px 21px */
-button{
+
+button {
     background-color: #0077C5;
-    width: 90%;
+    border: none;
+    width: 325px;
     border-radius: 3px;
     height: 40px;
     color: #ffffff;
+    margin-left: 4.7px;
+    margin-right: 4.7px;
     cursor: pointer;
-     border: .1px solid black;
-     font-weight: normal;
-    font-size: .8em;
+    border: 0.8px solid black;
 }
 
-.form-top{
+.form-top {
     margin-top: 30px;
     margin-bottom: 30px;
 }
-.form-top .info{
+
+.form-top .info {
     margin-top: 20px;
 }
-.form-top h3{
+
+.form-top h3 {
     color: #4C4C4C;
     line-height: 1.1;
     font-weight: 400;
     font-size: 24px;
 }
-.form-top .info{
+
+.form-top .info {
     color: #4C4C4C;
     font-size: 14px;
 }
-.form-footer a, .terms a{
-    color: #0077C5;
-    text-decoration: none;
-}
-.terms{
+
+.terms {
     margin-top: 30px;
     padding: 0 50px;
     font-style: italic;
     font-size: 12px;
     color: #8a8585;
 }
-.form-footer{
+
+.form-footer {
     background: #ECEEF1;
     font-size: 10px;
-    padding:2em;
+    padding: 2em;
     margin-top: 40px;
 }
-.footer{
+
+.footer {
     text-align: center;
     font-size: .8em;
     margin: 2em 0;
     color: grey;
 }
-.footer ul li{
+
+.footer ul li {
     display: inline;
     padding: 5px;
 }
-.footer p,a{
+
+.footer p,
+a {
     padding: 0.3em;
-    color:#444;
+    color: #444;
 }
-.footer a{
-    text-decoration: none;
-}
-.footer a:hover{
+
+.footer a:hover {
     text-decoration: underline;
 }
-    
+
+* a {
+    color: #0077C5;
+}
